--- a/moths/config/trainer/dev.yaml
+++ b/moths/config/trainer/dev.yaml
@@ -24,6 +24,17 @@ loggers:
     version: ""
     log_graph: false
     prefix: ""
+  - _target_: pytorch_lightning.loggers.wandb.WandbLogger
+    entity: "butterflies"
+    project: "dev"
+    offline: False
+    id: null # pass correct id to resume experiment!
+    log_model: False
+    prefix: ""
+    job_type: "train"
+    group: ""
+    tags: [ ]
+
 
 callbacks:
   - _target_: pytorch_lightning.callbacks.ModelCheckpoint
