--- a/moths/config/trainer/prod.yaml
+++ b/moths/config/trainer/prod.yaml
@@ -4,7 +4,7 @@ instance:
   default_root_dir: null
   gradient_clip_val: 0.0
   num_processes: 1
-  gpus: null
+  gpus: 1
   log_gpu_memory: null
   overfit_batches: 0.0
   fast_dev_run: False
