--- a/moths/config/lit/prod.yaml
+++ b/moths/config/lit/prod.yaml
@@ -1,13 +1,13 @@
 optimizer:
   _target_: torch.optim.Adam
   lr: 0.003
-  weight_decay: 0.001
+  weight_decay: 0.0001
 
 loss:
   _target_: torch.nn.CrossEntropyLoss
 
-train_metrics:
+metrics:
   - _target_: torchmetrics.Accuracy
-
-test_metrics:
-  - _target_: torchmetrics.Accuracy
+  - _target_: torchmetrics.F1
+  - _target_: torchmetrics.Precision
+  - _target_: torchmetrics.Recall
