--- a/moths/config/lit/dev.yaml
+++ b/moths/config/lit/dev.yaml
@@ -1,14 +1,23 @@
+device: "cpu"
+
 optimizer:
   _target_: torch.optim.Adam
   lr: 0.003
-  weight_decay: 0.001
+  weight_decay: 0.0001
 
 loss:
   _target_: torch.nn.CrossEntropyLoss
 
-train_metrics:
+metrics:
   - _target_: torchmetrics.Accuracy
-
-
-test_metrics:
-  - _target_: torchmetrics.Accuracy
+    average: micro
+  - _target_: torchmetrics.Precision
+    average: macro
+  - _target_: torchmetrics.Recall
+    average: macro
+  - _target_: torchmetrics.F1
+    average: macro
+#  - _target_: torchmetrics.AUROC
+#    average: macro
+#  - _target_: torchmetrics.AveragePrecision
+#    average: macro
