--- a/moths/config/trainer/prod.yaml
+++ b/moths/config/trainer/prod.yaml
@@ -8,7 +8,7 @@ instance:
   log_gpu_memory: null
   overfit_batches: 0.0
   fast_dev_run: False
-  max_epochs: 10
+  max_epochs: 1
   min_epochs: 1
   log_every_n_steps: 150
   precision: 32
@@ -46,3 +46,7 @@ callbacks:
   - _target_: pytorch_lightning.callbacks.LearningRateMonitor
     logging_interval: step
     log_momentum: True
+  - _target_: pytorch_lightning.callbacks.EarlyStopping
+    monitor: "val-loss"
+    patience: 2
+    check_on_train_epoch_end: false
