--- a/moths/config/data/prod.yaml
+++ b/moths/config/data/prod.yaml
@@ -1,10 +1,11 @@
 data_path: /home/vlinderstichting/Data/moths/artifacts/image_folder
-label_hierarchy_file: /home/vlinderstichting/Data/moths/artifacts-2/label-hierarchy.csv
+label_hierarchy_file: /home/vlinderstichting/Data/moths/data/family.csv
 
 test_fraction: 0.1
 batch_size: 64
 num_workers: 12
 pin_memory: true
+min_samples: 300
 
 train_transforms:
   - _target_: torchvision.transforms.RandomCrop
