--- a/moths/config/lit/prod.yaml
+++ b/moths/config/lit/prod.yaml
@@ -10,6 +10,10 @@ loss:
 
 metrics:
   - _target_: torchmetrics.Accuracy
-  - _target_: torchmetrics.F1
+    average: micro
   - _target_: torchmetrics.Precision
+    average: macro
   - _target_: torchmetrics.Recall
+    average: macro
+  - _target_: torchmetrics.F1
+    average: macro
