--- a/moths/config/config.yaml
+++ b/moths/config/config.yaml
@@ -1,11 +1,11 @@
 defaults:
   - _self_
   - code_config
-  - data: prod
-  - model: prod
-  - lit: prod
-  - trainer: prod
+  - data: dev
+  - model: dev
+  - lit: dev
+  - trainer: dev
 
 seed: 31415
-debug: false
+debug: true
 test: false
