--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ scikit-learn = "^1.0.1"
 wandb = "^0.12.6"
 pytorch-lightning = "^1.5.1"
 torchmetrics = "^0.6.0"
+pandas = "^1.3.4"
+seaborn = "^0.11.2"
+notebook = "^6.4.6"
 
 [tool.poetry.dev-dependencies]
 black = "^21.10b0"
@@ -22,7 +25,6 @@ isort = "^5.10.1"
 mypy = "^0.910"
 flake8 = "^4.0.1"
 pytest = "^6.2.5"
-ipython = "^7.29.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
