--- a/moths/config/data/prod.yaml
+++ b/moths/config/data/prod.yaml
@@ -6,6 +6,7 @@ batch_size: 64
 num_workers: 12
 pin_memory: true
 min_samples: 300
+weighted_sampling: false
 
 train_transforms:
   - _target_: torchvision.transforms.RandomCrop
