do (short-edge) resize before crop

--- a/moths/config/data/prod.yaml
+++ b/moths/config/data/prod.yaml
@@ -9,6 +9,8 @@ min_samples: 300
 weighted_sampling: false
 
 train_transforms:
+  - _target_: torchvision.transforms.Resize
+    size: 224
   - _target_: torchvision.transforms.RandomCrop
     size: 224
     pad_if_needed: true
@@ -24,6 +26,8 @@ train_transforms:
       - 48.89
 
 test_transforms:
+  - _target_: torchvision.transforms.Resize
+    size: 224
   - _target_: torchvision.transforms.CenterCrop
     size: 224
   - _target_: torchvision.transforms.ToTensor
