--- a/moths/config/lit/prod.yaml
+++ b/moths/config/lit/prod.yaml
@@ -2,8 +2,10 @@ device: "cuda:0"
 
 optimizer:
   _target_: torch.optim.Adam
-  lr: 0.003
+  lr: 0.0003
   weight_decay: 0.0001
+
+unfreeze_backbone_epoch: 1
 
 loss:
   _target_: torch.nn.CrossEntropyLoss
