--- a/moths/config/data/prod.yaml
+++ b/moths/config/data/prod.yaml
@@ -6,7 +6,7 @@ batch_size: 64
 num_workers: 12
 pin_memory: true
 min_samples: 300
-weighted_sampling: false
+weighted_sampling: none
 
 train_transforms:
   - _target_: torchvision.transforms.TrivialAugmentWide
