--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,12 @@ seaborn = "^0.11.2"
 notebook = "^6.4.6"
 
 [tool.poetry.dev-dependencies]
-black = "^21.10b0"
+black = {extras = ["jupyter"], version = "^21.11b1"}
 isort = "^5.10.1"
 mypy = "^0.910"
 flake8 = "^4.0.1"
 pytest = "^6.2.5"
+pre-commit = "^2.16.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
