--- a/moths/config/lit/default.yaml
+++ b/moths/config/lit/default.yaml
@@ -1,23 +1,20 @@
-device: "cpu"
-
 optimizer:
   _target_: torch.optim.Adam
-  lr: 0.003
+  lr: 0.0003
   weight_decay: 0.0001
 
 loss:
   _target_: torch.nn.CrossEntropyLoss
-
-#data_mix:
-#  mode: MIXUP
-#  probability: 1.0
-#  alpha: 0.5
 
 loss_weights:
   - 1
   - 1
   - 1
   - 1
+
+unfreeze_backbone_epoch_start: 0
+unfreeze_backbone_epoch_duration: 0
+unfreeze_backbone_percentage: 0.0
 
 metrics:
   - _target_: torchmetrics.Accuracy
