--- a/moths/config/dev.yaml
+++ b/moths/config/dev.yaml
@@ -1,7 +1,8 @@
 defaults:
-  - code_config
   - default
   - _self_
+
+tune: false
 
 data:
   data_path: test_data/image_folder
@@ -15,7 +16,7 @@ data:
 trainer:
   instance:
     gpus: null
-    max_epochs: 3
+    max_epochs: 1
     min_epochs: 1
     log_every_n_steps: 5
 
