--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ torchmetrics = "^0.6.0"
 pandas = "^1.3.4"
 seaborn = "^0.11.2"
 notebook = "^6.4.6"
+hydra-colorlog = "^1.1.0"
+hydra-ax-sweeper = "^1.1.5"
 
 [tool.poetry.dev-dependencies]
 black = {extras = ["jupyter"], version = "^21.11b1"}
