--- a/moths/config/lit/default.yaml
+++ b/moths/config/lit/default.yaml
@@ -1,13 +1,14 @@
 optimizer:
   _target_: torch.optim.Adam
   lr: 0.0003
-  weight_decay: 0.0001
+  weight_decay: 0.0
 
 loss:
   _target_: torch.nn.CrossEntropyLoss
+  label_smoothing: 0.0
 
 loss_weights:
-  - 1
+  - 6
   - 1
   - 1
   - 1
