--- a/config/optim.yaml
+++ b/config/optim.yaml
@@ -23,7 +23,7 @@ hydra:
           bounds: [ 100, 500 ]
         data.weighted_sampling:
           type: choice
-          value_type: str
+          value_type: bool
           values: [ true, false ]
         data.weighted_sampling_fraction:
           type: range
@@ -42,9 +42,9 @@ hydra:
           value_type: int
           bounds: [ 1, 6 ]
         lit.unfreeze_backbone_epoch_start:
-          type: choice  # note choice
+          type: range
           value_type: int
-          bounds: [ 0, 1 ]
+          bounds: [ 0, 2 ]
         lit.unfreeze_backbone_epoch_duration:
           type: range
           value_type: int
