--- a/config/trainer/default.yaml
+++ b/config/trainer/default.yaml
@@ -12,7 +12,7 @@ instance:
   max_epochs: 20
   min_epochs: 4
   log_every_n_steps: 150
-  precision: 32
+  precision: 16
   num_sanity_val_steps: 2
   profiler: null
   auto_lr_find: false
@@ -44,7 +44,7 @@ callbacks:
     monitor: "epoch-val-loss"
     dirpath: "checkpoints/"
     save_last: true
-    filename: "{epoch:03}-{val-total-loss:.4f}"
+    filename: "{epoch:03}-{epoch-val-loss:.4f}"
     save_top_k: 1
   lr_monitor:
     _target_: pytorch_lightning.callbacks.LearningRateMonitor
@@ -53,5 +53,5 @@ callbacks:
   early_stopping:
     _target_: pytorch_lightning.callbacks.EarlyStopping
     monitor: "epoch-val-loss"
-    patience: 1
+    patience: 0
     check_on_train_epoch_end: false
