--- a/config/lit/default.yaml
+++ b/config/lit/default.yaml
@@ -1,11 +1,11 @@
 optimizer:
   _target_: torch.optim.Adam
-  lr: 0.0022908676527677745
+  lr: 0.003
   weight_decay: 0.0
 
 loss:
   _target_: torch.nn.CrossEntropyLoss
-  label_smoothing: 0.003932545799762011
+  label_smoothing: 0.004
 
 loss_weights:
   - 5
