--- a/config/optim.yaml
+++ b/config/optim.yaml
@@ -6,21 +6,21 @@ defaults:
 hydra:
   sweeper:
     ax_config:
-      max_trials: 4
+      max_trials: 6
 
       experiment:
         minimize: true
 
       early_stop:
-        max_epochs_without_improvement: 2
+        max_epochs_without_improvement: 6
 
       is_noisy: true
 
       params:
-        data.min_samples:
-          type: range
-          value_type: int
-          bounds: [ 100, 1000 ]
+#        data.min_samples:
+#          type: range
+#          value_type: int
+#          bounds: [ 50, 1000 ]
 #        data.weighted_sampling:
 #          type: choice
 #          value_type: bool
