--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ seaborn = "^0.11.2"
 notebook = "^6.4.6"
 hydra-colorlog = "^1.1.0"
 hydra-ax-sweeper = "^1.1.5"
+pycm = "^3.4"
 
 [tool.poetry.dev-dependencies]
 black = {extras = ["jupyter"], version = "^21.11b1"}
