--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ mypy = "^0.910"
 flake8 = "^4.0.1"
 pytest = "^6.2.5"
 pre-commit = "^2.16.0"
+ipdb = "^0.13.9"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
