--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Kay Lamerigts <k.lamerigts@gmail.com>, Lucas de Haas <lmdehaas@gmail
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.8,<3.11"
 typer = "^0.4.0"
 torch = "^1.10.0"
 torchvision = "^0.11.1"
