--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,12 @@
+
 tasks:
-  - before: pip install --upgrade pip
-    init: |
+  - before: |
+      pip install --upgrade pip
       pip install poetry
-      poetry install
+      poetry config virtualenvs.create false --local
+    init: poetry install
     command: poetry shell
+
+vscode:
+  extensions:
+    - ms-python.python
