--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ flake8 = "^4.0.1"
 pytest = "^6.2.5"
 pre-commit = "^2.16.0"
 ipdb = "^0.13.9"
+pylint = "^2.13.8"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
