more tinkering with gitpod to get the init of the venvs correct

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,9 +1,8 @@
-
 tasks:
   - before: |
       pip install --upgrade pip
       pip install poetry
-      poetry config virtualenvs.create false --local
+      poetry config virtualenvs.in-project true
     init: poetry install
     command: poetry shell
 
